--- a/index.html
+++ b/index.html
@@ -964,6 +964,13 @@
     display: block !important;
   }
 }
+    /* Ocultar el ícono/botón de WhatsApp del HEADER solo en móvil vertical */
+@media (max-width: 600px) and (orientation: portrait) {
+  header a[href*="wa.me"],
+  header a[href*="api.whatsapp.com"] {
+    display: none !important;
+  }
+}
 
 </style>
 <link href="https://psicologo-villaurquiza.com.ar/" rel="canonical"/><meta content="Lic. Fernando Madruga - Psicólogo" property="og:title"/><meta content="Psicólogo en Villa Urquiza. Un espacio de trabajo reflexivo para pensar lo que te está pasando, poner en palabras lo que se vuelve difícil." property="og:description"/><meta content="website" property="og:type"/><meta content="https://psicologo-villaurquiza.com.ar/" property="og:url"/><meta content="https://fmadruga19.github.io/psvu/og-divan-a.png" property="og:image"/><meta content="Psicólogo Villa Urquiza" property="og:site_name"/><meta content="es_AR" property="og:locale"/><meta content="summary_large_image" name="twitter:card"/><meta content="Lic. Fernando Madruga - Psicólogo" name="twitter:title"/><meta content="Psicólogo en Villa Urquiza. Un espacio de trabajo reflexivo para pensar lo que te está pasando, poner en palabras lo que se vuelve difícil." name="twitter:description"/><meta content="https://fmadruga19.github.io/psvu/og-divan-a.png" name="twitter:image"/><link href="favicon.ico" rel="icon"/><link href="favicon-32.png" rel="icon" sizes="32x32" type="image/png"/><link href="favicon-16.png" rel="icon" sizes="16x16" type="image/png"/><link href="apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180"/><meta content="Psicólogo en Villa Urquiza. Un espacio de trabajo reflexivo para pensar lo que te está pasando, poner en palabras lo que se vuelve difícil." name="description"/></head>
